--- a/admin-service/src/main/resources/application.yml
+++ b/admin-service/src/main/resources/application.yml
@@ -14,8 +14,23 @@ server:
 logging:
   pattern:
     level: "%5p [${spring.application.name},%X{traceId:-},%X{spanId:-}]"
+#    console: "%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX} %-5level [%thread] [%X{traceId:-},%X{spanId:-}] %logger{36} - %msg%n"
+
+#  logback:
+#    appender:
+#      loki:
+#        class: com.github.loki4j.logback.Loki4jAppender
+#        name: LOKI
+#        endpoint: http://loki:3100/loki/api/v1/push
+#        logEvents: INFO,ERROR,WARN,DEBUG
+#        batchSize: 100
+#        batchTimeMs: 5000
+  #    appender-ref:
+  #      - ref: CONSOLE
+  #      - ref: LOKI
+
   level:
-    root: info
+    root: INFO
     io.micrometer.tracing: DEBUG
     org.springframework.boot.actuate.autoconfigure.tracing: DEBUG
     com.rajat.admin_service: DEBUG
@@ -24,6 +39,10 @@ logging:
 #    io.github.resilience4j: DEBUG
 
 management:
+  prometheus:
+    metrics:
+      export:
+        enabled: true
   health:
     circuitbreakers:
       enabled: true
@@ -32,13 +51,50 @@ management:
       exposure:
         include:
           - health
+          - info
+          - metrics
+          - prometheus
+  otlp:
+    metrics:
+      export:
+        url: http://otel-collector:4318/v1/metrics
+        step: 10s
+    tracing:
+      endpoint: http://otel-collector:4318/v1/traces
+  metrics:
+    distribution:
+      percentiles:
+        do.sleep.method.timed: 0.99, 0.95, 0.9, 0.7, 0.5
+        http.server.requests: 0.99, 0.95, 0.9, 0.7, 0.5
+      percentiles-histogram:
+        do.sleep.method.timed: true
+        http.server.requests: true
+        http:
+          server:
+            requests: true
+      minimum-expected-value:
+        do.sleep.method.timed: 100ms
+        http.server.requests: 100ms
+      maximum-expected-value:
+        do.sleep.method.timed: 10s
+        http.server.requests: 10s
+      slo:
+        do.sleep.method.timed: 300ms,500ms,1s,2s
+        http.server.requests: 300ms,500ms,1s,2s
+
+  observations:
+    key-values:
+      application: admin-service
   endpoint:
+    prometheus:
+      enabled: true
     health:
       show-details: always
 #zipkin
+
   zipkin:
     tracing:
-      endpoint: http://zipkin:9411/api/v2/spans
+      endpoint: http://zipkin-all-in-one:9411/api/v2/spans
   tracing:
     enabled: true
     sampling:
