--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -33,6 +33,12 @@
     <dependencies>
         <!-- JUnit 5 -->
         <dependency>
+            <groupId>com.github.loki4j</groupId>
+            <artifactId>loki-logback-appender</artifactId>
+            <version>1.4.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.9.2</version>
