--- a/price-service/src/main/resources/application.yml
+++ b/price-service/src/main/resources/application.yml
@@ -50,7 +50,7 @@ management:
       show-details: always
   zipkin:
     tracing:
-      endpoint: http://zipkin:9411/api/v2/spans
+      endpoint: http://zipkin-all-in-one:9411/api/v2/spans
   tracing:
     enabled: true
     sampling:
